tests/errors/E003.zen
int main() {
    /// Error 003: Missing return statement in function 'main'
}